--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 25px;
   max-width: 400px;
   min-width: 400px;
-  background-color: #dfe6e9;
+  background-color: #9aebeb;
   text-align: center;
 }
 
